# Oleg

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  example.env  pyproject.toml
oleg/: __init__.py  __main__.py  variables.py
oleg/dotenv/: __init__.py  load.py
oleg/ext/: __init__.py  language.py  welcomer.py
oleg/framework/: bot.py  cache.py  data.py  environment.py
oleg/hooks/: __init__.py  is_owner.py
oleg/plugins/: admin.py  general.py  language.py  language_choice.py  new_year.py
oleg/sdk/: __init__.py
oleg/sdk/aio/: __init__.py  event_policy.py  loop.py
oleg/sdk/dotenv/: __init__.py  load.py  parse.py
oleg/utils/: humanize_version.py  zip.py
src/oleg/: __init__.py  __main__.py  _caching.py
src/oleg/data/: config.json
src/oleg/ext/: __init__.py  language.py  welcomer.py
src/oleg/framework/: bot.py  cache.py  data.py  environment.py
src/oleg/plugins/: general.py  language.py
src/oleg/utils/: humanize_version.py
